[gd_scene load_steps=4 format=3 uid="uid://cnhmhyid0160y"]

[ext_resource type="Texture2D" uid="uid://cnu2dmq1xi4ca" path="res://assets/Map.png" id="1_321ah"]
[ext_resource type="Script" path="res://scripts/map_menu.gd" id="1_q7l0f"]
[ext_resource type="Texture2D" uid="uid://ccfpr5e4p4yb8" path="res://assets/dot.png" id="3_omgnc"]

[node name="Map" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.705882, 0.572549, 0.329412, 1)
clip_contents = true
layout_mode = 2
mouse_filter = 1

[node name="MapMenu" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_q7l0f")

[node name="WholeMap" type="TextureRect" parent="PanelContainer/MapMenu"]
layout_mode = 2
texture = ExtResource("1_321ah")
expand_mode = 3
stretch_mode = 5

[node name="Midgard1" type="TextureButton" parent="PanelContainer/MapMenu/WholeMap"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.259
anchor_top = 0.665
anchor_right = 0.262
anchor_bottom = 0.674
offset_left = -14.648
offset_top = -13.72
offset_right = 14.136
offset_bottom = 14.168
texture_normal = ExtResource("3_omgnc")

[connection signal="resized" from="PanelContainer/MapMenu/WholeMap" to="PanelContainer/MapMenu" method="_on_whole_map_resized"]
[connection signal="pressed" from="PanelContainer/MapMenu/WholeMap/Midgard1" to="PanelContainer/MapMenu" method="_on_midgard_1_pressed"]
